Bug 328749 - Diagram properties dialog shows up after opening object properties dialog
Summary: Diagram properties dialog shows up after opening object properties dialog
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-13 07:43 UTC by Joris Steyn
Modified: 2013-12-14 08:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joris Steyn 2013-12-13 07:43:04 UTC
When opening an objects properties dialog by double-clicking on its widget, the diagrams properties dialog opens after closing the object properties dialog.

This bug is not present in 4.11 or 4.12, but observable in master (tested on 9f84451).

Reproducible: Always

Steps to Reproduce:
1. Create a new class
2. Open the class properties dialog by double clicking on the widget
3. Click Cancel
Actual Results:  
Diagram properties dialog opens.
Comment 1 Joris Steyn 2013-12-14 08:46:13 UTC
Git commit d4888d63fc58c5ec29ffd739bf0bff246d40472b by Joris Steyn.
Committed on 14/12/2013 at 08:41.
Pushed by jorissteyn into branch 'master'.

Fix dialog properties opening after widget dialog

M  +5    -0    umbrello/toolbarstate.cpp

http://commits.kde.org/umbrello/d4888d63fc58c5ec29ffd739bf0bff246d40472b