Fix dialog properties opening after widget dialog

BUG: 328749